# forexBot

./: .replit  README.md  app.py  main.py  models.py  optimize_strategy.py  pyproject.toml
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
cached_data/: optimization_checkpoint.json
config/: strategy_config.json
static/js/: charts.js
templates/: base.html  dashboard.html
trading/: lorentzian.py  oanda_client.py  optimizer.py  risk_manager.py  technical_indicators.py
