[project]
name = "repl-nix-forexbotoptimizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "apscheduler>=3.10.4",
    "oandapyv20>=0.7.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
